tests/baselines/reference/methodSignaturesWithOverloads2.errors.txt
tests/cases/conformance/types/objectTypeLiteral/methodSignatures/methodSignaturesWithOverloads2.ts(18,5): error TS2463: Duplicate overload signature for func4.
tests/cases/conformance/types/objectTypeLiteral/methodSignatures/methodSignaturesWithOverloads2.ts(19,5): error TS2463: Duplicate overload signature for func4.
tests/cases/conformance/types/objectTypeLiteral/methodSignatures/methodSignaturesWithOverloads2.ts(21,9): error TS2463: Duplicate overload signature for call signature.
tests/cases/conformance/types/objectTypeLiteral/methodSignatures/methodSignaturesWithOverloads2.ts(22,9): error TS2463: Duplicate overload signature for call signature.


==== tests/cases/conformance/types/objectTypeLiteral/methodSignatures/methodSignaturesWithOverloads2.ts (4 errors) ====
    // Object type literals permit overloads with optionality but they must match
    
    var c: {
        func4?(x: number): number;
        func4?(s: string): string;
        func5?: {
            (x: number): number;
            (s: string): string;
        };
    };
    
    // no errors
    c.func4 = c.func5;
    c.func5 = c.func4;
    
    
    var c2: {
        func4?<T>(x: T): number;
        ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for func4.
        func4? <T>(s: T): string;
        ~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for func4.
        func5?: {
            <T>(x: T): number;
            ~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for call signature.
            <T>(s: T): string;
            ~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for call signature.
        };
    };
    
    // no errors
    c2.func4 = c2.func5;
    c2.func5 = c2.func4;